# copyaid

./: Makefile  README.md  copyaidit.py  mypy.ini  pyproject.toml  qoai.py
blast/: test_cases.py
blast/cases/proofread1/: settings.toml
blast/cases/proofread1/input/: badbits
blast/cases/revise1/: settings.toml  settings.xml
blast/cases/revise2/: settings.toml
blast/cases/revise3-1106/: settings.toml
blast/cases/revise3/input/: documentation
blast/inputs/badbits/: home-page-begin.md  home-page-example.md  start-page-test.txt  verb_setup.txt
blast/inputs/documentation/: examples.txt  examples2.txt  noplease1.md  noplease2.md  please1.md  please2.md  selfdoc4.md
copyaid/: cli.py  core.py  diff.py  task.py  util.py
copyaid/config/: copyaid.toml  copyedit.toml  copystorm.toml
copyaid/data/: cold-example.toml  cold-revise.toml  copyaid.toml  proof-example.toml  warm-example.toml
set/: cold-revise.xml  grammar.json  grammar.xml  improve-prompt.xml  multi-revise.json  multi-revise.xml  proofread.json  proofread.xml
tests/: mock_config.toml  test_cli.py  test_diff.py  test_qoai.py
tests/cases/diff/commas1/: expected.txt  revised.txt
tests/cases/diff/jupiter/: expected.txt  orig.txt  revised.txt
tests/cases/diff/longish1/: expected.txt  orig.txt
tests/cases/diff/rewrite1/: expected.txt
tests/cases/diff/rewrite2/: expected.txt  orig.txt
tests/cases/diff/rewrite3/: expected.txt  orig.txt
tests/cases/diff/rewrite4/: expected.txt  orig.txt
tests/cases/diff/simple/: expected.txt  orig.txt  revised.txt
tests/cases/undo/indent1/: orig.txt  (+1 more)
(+17 files in other folders)
